# ID-Fits

./: .gitignore  CMakeLists.txt  README.md  launch_ipython_notebook.sh
cpp/SnoopFaceAlignmentLib/: Alignment.cc  Alignment.h  CMakeLists.txt  FaceDetection.h  ForestBasedRegression.cc  ForestBasedRegression.h  ForestBasedRegressionTraining.h  Hog.cc  Hog.h  LibLinearWrapper.h
cpp/SnoopFaceDescLib/: CMakeLists.txt  Descriptors.h  ForestBasedRegression.h  HDF5.h  Lda.h  Pca.h  Pipeline.cc  Pipeline.h  Stats.cc  Stats.h  Train.cc  Train.h
cpp_wrapper/: CMakeLists.txt  Makefile  __init__.py  alignment.pyx  descriptors.pxd  descriptors.pyx  face_detection.pyx  opencv_types.pxd  opencv_types.pyx  setup.py  tree_based_regression.pyx
cpp_wrapper/3rdparties/: cv2.cpp
cpp_wrapper/3rdparties/numpy/: __multiarray_api.h  __ufunc_api.h  _neighborhood_iterator_imp.h  _numpyconfig.h  arrayobject.h  arrayscalars.h  halffloat.h  ndarrayobject.h  ndarraytypes.h  noprefix.h  npy_1_7_deprecated_api.h  npy_3kcompat.h  npy_common.h  npy_cpu.h  npy_endian.h  npy_interrupt.h  npy_math.h  npy_no_deprecated_api.h  npy_os.h  numpyconfig.h  old_defines.h  oldnumeric.h  ufuncobject.h  utils.h
lib/: __init__.py  alignment.py  config.py  database.py  descriptors.py  detector.py  face_detector.py  filtering.py  scores_accumulator.py  search.py  stats.py  tools.py
lib/benchmarks/: __init__.py  blufr.py  lfw.py
lib/datasets/: 300w.py  bioid.py  landmarks_file.py  lfw.py
lib/learning/: __init__.py  joint_bayesian.py  lda.py  pca.py
lib/tests/: alignment_methods.py  eye.pgm  fisher_vector.py  gmm.py  hog.py  large_margin_dimension_reduction.py  lbp_descriptors.py  lda_test.py  mahalanobis_metric.py
lib/unstable/: fisher_vector.py  subspace_comparaison.py
lib/unstable/learning/: __init__.py  gmm.py  large_margin_dimension_reduction.py  mahalanobis_metric.py
lib/utils/: file_manager.py  parallelize.py
notebooks/: 3D normalization.ipynb  Alignment System Comparaison.ipynb  Alignment using Local Binary Feature - Analysis.ipynb  Alignment using Local Binary Feature - Training.ipynb  Dataset Overview.ipynb  Descriptors.ipynb  Face detection.ipynb  Fisher Vectors.ipynb  High-dimensional descriptors.ipynb  Hog.ipynb  Index Retrieval.ipynb  Joint Bayesian.ipynb  LBP analysis.ipynb  Quantization.ipynb  startup.py
notebooks/.ipython/: ipython_config.py  ipython_nbconvert_config.py  ipython_notebook_config.py  ipython_qtconsole_config.py
